--- a/angular-reddit/angular.json
+++ b/angular-reddit/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": false
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -27,9 +30,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/semantic-ui-css/semantic.min.css"
             ],
-            "scripts": []
+            "scripts": ["node_modules/semantic-ui-css/semantic.min.js"]
           },
           "configurations": {
             "production": {
@@ -94,9 +98,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "semantic/dist/semantic.min.css"
             ],
-            "scripts": []
+            "scripts": ["semantic/dist/semantic.min.js"]
           }
         }
       }
